--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "clean": "rm -rf dist",
+    "lint": "eslint . --ext .ts",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -16,16 +19,14 @@
   "author": "Stephen Masunga",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.13.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.8.1",
+    "graphql": "^15.8.0",
     "morgan": "^1.10.0",
-    "pg": "^8.11.5",
-    "pg-express": "^0.0.22"
+    "pg": "^8.11.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
