--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,14 +19,18 @@
   "author": "Stephen Masunga",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/utils": "^10.8.6",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "graphql-scalars": "^1.24.1",
     "morgan": "^1.10.0",
-    "pg": "^8.11.5"
+    "pg": "^8.14.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
