--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@graphql-tools/utils": "^10.8.6",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
